@@ -2,6 +2,7 @@
 #include "ButtonTranslator.h"
 #include "util.h"
 #include "settings.h"
+#include "SkinInfo.h"
 
 CButtonTranslator g_buttonTranslator;
 extern CStdString g_LoadErrorStr;
@@ -424,6 +425,7 @@ WORD CButtonTranslator::TranslateWindowString(const char *szWindow)
   else if (strWindow.Equals("videomenu")) wWindowID = WINDOW_VIDEO_MENU;
   else if (strWindow.Equals("filebrowser")) wWindowID = WINDOW_DIALOG_FILE_BROWSER;
   else if (strWindow.Equals("startup")) wWindowID = WINDOW_STARTUP;
+  else if (strWindow.Equals("startwindow")) wWindowID = g_SkinInfo.GetStartWindow();
   else
     CLog::Log(LOGERROR, "Window Translator: Can't find window %s", strWindow.c_str());
 
